style.css
@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200;300;400;500;700;900&display=swap');

body
{
    margin: 0;
    padding: 0;
}

main
{
    font-family: "Gothic A1", "sans-serif";

    background: url(assets/background.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}


h2
{
    font-size: 2em;
    text-align: left;
    margin: 20px;
    padding: none;
    color: aliceblue;
    letter-spacing: 0.1em;
    width: 100%;
}

p
{
    font-size: .9em;
    text-align: left;
    margin: 20px;
    padding: none;
    color: aliceblue;
    letter-spacing: 0.1em;
    width: 100%;
}

.inputs
{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    flex-direction: column;
    z-index: 2;

    border: 2px;
    border-style: solid;
    border-color: aliceblue;
    border-radius: 10px;
    backdrop-filter: blur(10px);
    height: 500px;
    width: 350px;
}

.entry-box
{
    display: flex;
    align-items: center;
    margin: 20px;
    padding: 10px;
    border: 2px solid aliceblue;
    border-radius: 10px;
    background-color: transparent;
    position: relative;
    font-size: 18px;
}

.entry-box input[type="text"]
{
    width: 100%;
    padding: 20px 10px 5px 0px;
    border: none;
    border-radius: 10px;
    background-color: transparent;
    outline: none;
    font-size: inherit;
    color: aliceblue;
}

.entry-box input[type="password"]
{
    width: 100%;
    padding: 20px 10px 5px 0px;
    border: none;
    border-radius: 10px;
    background-color: transparent;
    outline: none;
    font-size: inherit;
    color: aliceblue;
}

.entry-box label 
{
    position: absolute;
    top: 50%;
    left: 10px;
    transform: translateY(-50%);
    color: #f5f5f5;
    pointer-events: none;
    transition: 0.3s;
}

.entry-box svg 
{
    fill: #f5f5f5;
    margin-right: 5px;
    width: 1em;
    height: 1em;
}

.entry-box input[type="text"]:focus + label,
.entry-box input[type="text"]:valid + label
{
    transform: translateY(-150%);
    font-size: 0.8em; 
    color: aliceblue;
}

.entry-box input[type="password"]:focus + label,
.entry-box input[type="password"]:valid + label 
{
    transform: translateY(-150%);
    font-size: 0.8em; 
    color: aliceblue;
}

.forget-button
{
    display: flex;
    align-items: center;
    margin: 20px;
    padding: none;
    position: relative;
}

.forget
{
    background-color: transparent;
    color: aliceblue;
    padding: 10px 10px;
    border: none;
    border-radius: 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

.forget:hover
{
    background-color: #3e69ad; 
}

.sign-in-button
{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

.sign-in
{
    background-color: #3e69ad;
    color: aliceblue;
    border: none;
    padding: 15px 130px;
    border-radius: 30px;
    font-size: 16px;
}

.sign-up-button
{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.sign-up
{
    background-color: transparent;
    color: aliceblue;
    padding: 10px 10px;
    border: none;
    border-radius: 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

.sign-up:hover
{
    background-color: #3e69ad; 
}

